<resources>
    <string name="app_name">Location Remainder</string>
    <string name="welcome_string">Welcome to the Location Remainder app.</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logout_failed">Logout failed</string>
    <string name="location_request_info">This application requires access to a precise location for best performance.\nPlease allow this access on the next screen.</string>
    <string name="background_location_request_info">This application requires access to a background location for best performance.\nPlease allow this access on the next screen.</string>
    <string name="notification_request_info">This application requires notification permission for best performance.\nPlease allow this permission on the next screen.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="poi_needed">Please pick a location firstly</string>
    <string name="location_permissions_denied">Location permission have not been granted!\nThe functionality of the application is significantly limited.</string>
    <string name="background_location_permissions_denied">Background location permission have not been granted!\nThe functionality of the application is significantly limited.</string>
    <string name="notification_permissions_denied">Notification permission have not been granted!\nApplication will not be able to show the location remainder notification.</string>
    <string name="accept_poi_desc">Accepts POI as remainder location</string>
    <string name="adds_new_remainder_location_desc">Adds new remainder location</string>
    <string name="no_data">No data</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="remainder_location">Remainder location</string>
    <string name="radius">Radius</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="fields_needed">Set Title before save</string>
    <string name="map_instructions">Pick POI to set marker and save position as remainder location.</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_fancy">Fancy</string>
    <string name="map_style_failed">Map style setting failed</string>
    <string name="remainder_saved">Remainder saved</string>
    <string name="no_data_description">There is no data</string>

    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_add_failed">Adding geofence failed</string>

    <string name="unit_m">%1$dm</string>

    <string name="notification_channel_id">location_remainder</string>
    <string name="notification_channel_name">Location Remainder</string>
    <string name="message_body_template">You are near %s. Don\'t forget %s</string>

    <string name="default_latitude">52.225665764</string>
    <string name="default_longitude">21.003833318</string>
    <string name="default_zoom_level">15f</string>
    <string name="max_radius">1000</string>
    <string name="min_radius">15</string>
    <string name="default_radius">100</string>
</resources>